css/home.css
@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@350&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');

html, body {
	margin: 0;
	padding: 0;
	overflow-x: hidden;
}

a {
	text-decoration: none;
}
.grey {
	color: grey; /* xP */
}

#other {
	flex: 1;
	text-align: right;
	padding-right: 30px;
}

.tab {
	color: black;
	font-family: 'Nunito';
	padding: 5px;
	padding-left: 10px;
	padding-right: 10px;
	margin-right: 1px;
	margin-left: 1px;
	font-size: 17px;
	background: transparent;
	border-radius: 5px;
	transition: 0.3s;
}

.tab:hover {
	color: #ffffff;
	background: #3b4252ff;
}

.right-tab {
	font-family: 'Nunito';
	padding: 5px;
	padding-left: 10px;
	padding-right: 10px;
	margin-right: 1px;
	margin-left: 1px;
	font-size: 20px;
	color: #ffffff;
	background: #3b4252ff;
	border-radius: 5px;
	transition: 0.3s;
	box-shadow: 2px 2px 2px rgb(161, 161, 161);
}

.right-tab:hover {
	color: #ffffff;
	background: rgb(45, 50, 61);
	box-shadow: 3px 3px 3px rgb(161, 161, 161);
}

.spacer {
	width: 10px;
}

#panel {
	display: flex;
	align-items: center;
	background: white;
	padding: 20px;
	height: 40px;
	width: 100%;
	position: fixed;
	top: 0;
	z-index: 1;
	box-shadow: 0px 0px 15px rgb(63, 63, 63);
}

#wavy {
	position: fixed;
	z-index: -1;
	margin-top: 50px;
	height: 500px;
	user-select: none;
	-moz-user-select: none;
	-webkit-user-drag: none;
	-webkit-user-select: none;
	-ms-user-select: none;
}

#titleimage {
	z-index: 0;
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 520px;
	filter: brightness(200%);
	object-fit: cover;
}

#titletext {
	position: absolute; 
	margin-left: auto; 
	margin-right: auto;
	top: 250px;
	left: 50%;
	-ms-transform: translate(-50%, -25%);
	transform: translate(-50%, -25%);
	display: flex;
	align-items: center;
	justify-content: center;
	width: 100%;

}
#titletextleft {
	display: flex;
	align-items: center;
}

#titlelogoimage {
	background-attachment: fixed;
}

#titletextname {
	text-transform: uppercase;
	color: white;
	font-family: "Nunito";
	font-size: 120px;
	margin-left: 20px;
}
#titletextslogan {
	color: white;
	font-family: "Nunito";
	font-size: 40px;
}

.name {
	text-transform: uppercase;
	color: black;
	font-size: 30px;
	font-family: "Nunito";
	margin-left: 10px;
}


#appointment-description, #bot-description, #doctor-description, #diagnosis-description {
	display: flex; justify-content: center; align-items: center;
	height: 700px; background: whitesmoke;
}
#bot-description, #diagnosis-description {
	background: #576178ff; top: 0;
}
#doctor-description {
	background: #3b4252ff;
}

#appointment-header, #bot-header, #doctor-header, #diagnosis-header {
	font-size: 35px;
	font-family: 'Nunito';
	border-bottom: 4px solid;
    border-image-source: linear-gradient(to right,#2E3440,#4C566A);
	border-image-slice: 60 30;
	width: 500px;
	padding-bottom: 10px;
	font-weight: bold;
}
#bot-header, #doctor-header, #diagnosis-header {
	color: white;
	border-bottom: 4px solid;
    border-image-source: linear-gradient(to right, rgb(165, 186, 235), #ffffff);
	border-image-slice: 60 30;
}

#appointment-paragraph, #bot-paragraph, #doctor-paragraph, #diagnosis-paragraph {
	margin-top: 15px;
	font-family: 'Nunito';
	font-size: 20px;
	width: 500px;
}
#bot-paragraph, #doctor-paragraph, #diagnosis-paragraph {
	color: white
}

#appointment-image, #doctor-image {
	margin-left: 60px;
}
#bot-image, #diagnosis-image {
	margin-right: 60px;
}

#appointment-button, #bot-button, #doctor-button, #diagnosis-button {
	background: white; 
	font-family: "Nunito"; 
	font-size: 20px;
	padding-left: 30px; 
	padding-right: 30px; 
	padding-top: 10px; 
	padding-bottom: 10px;
	margin-top: 20px; 
	position: absolute; 
	border-radius: 10px; 
	color: #2E3440;
	transition: box-shadow 0.3s;
}
#appointment-button {
	background: #4C566A; 
	color: white;
}
#appointment-button:hover, #bot-button:hover, #doctor-button:hover, #diagnosis-button:hover {
	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
}


#newsletter {
	background: #3b4252ff; 
	font-family: "Nunito";
	height: 900px;
	text-align: center; 
	padding-top: 50px;
}
#newsletter-header {
	color: white; 
	font-size: 40px; 
	font-weight: bold; 
	margin-top: 50px;
	border-bottom: 4px solid;
    border-image-source: linear-gradient(to top right, rgb(165, 186, 235),#4C566A);
	border-image-slice: 60 30;
	padding-bottom: 30px;
	width: 1000px; 
	margin-left: auto; 
	margin-right: auto;
}
#newsletter-articles {
	display: flex; 
	justify-content: center;
	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
}
.newsletter-article {
	width: 350px; 
	background: white;
	padding-bottom: 20px;
	height: 500px; 
	margin-left: 10px;
	border-radius: 20px; 
	margin-right: 10px; 
	margin-bottom: 200px;
	box-shadow: 0 25px 50px rgba(0, 0, 0, 0.438);
}
.newsletter-article-image {
	width: 350px; 
	height: 200px; 
	object-fit: cover; 
	border-top-left-radius: 20px; 
	border-top-right-radius: 20px;
}
.newsletter-article-header {
	font-size: 30px;
	border-bottom: 4px solid;
	border-image-source: linear-gradient(to right,#2E3440,#4C566A);
	width: 300px; 
	margin-left: auto; 
	margin-right: auto;
	border-image-slice: 60 30; 
	padding-bottom: 20px;
}
.newsletter-article-preview {
	font-size: 18px; 
	margin-left: 50px;
	margin-right: 50px; 
	text-align: left;
}

.newsletter-article-button {
	font-family: "Nunito";
	padding: 5px;
	padding-left: 10px;
	padding-right: 10px;
	margin-right: 1px;
	margin-left: 1px;
	font-size: 20px;
	color: #ffffff;
	background: #3b4252ff;
	border: none;
	border-radius: 5px;
	transition: 0.3s;
	cursor: pointer;
	outline: none;
	box-shadow: 2px 2px 2px rgb(161, 161, 161);
}
.newsletter-article-button:hover {
	color: #ffffff;
	background: rgb(45, 50, 61);
	box-shadow: 3px 3px 3px rgb(161, 161, 161);
}

#contact {
	background: whitesmoke; 
	font-family: "Nunito";
	height: fit-content;
	margin-top: 50px;
	padding-top: 50px;
}

#contact-header {
	border-bottom: 4px solid;
    border-image-source: linear-gradient(to right,#2E3440,#4C566A);
	border-image-slice: 60 30;
	padding-bottom:20px;
	margin-left: auto;
	margin-right: auto;
	width: 900px;
	text-align: center;
	background: whitesmoke; 
	font-family: "Nunito";
	font-size: 40px;
	color: black;
	font-weight: bold;
}

.social-media-label {
	font-family: "Nunito";
	font-weight: bold;
	text-align: center;
}

.social-media-image {
	width: 100px;
}

#contact-info {
	margin-top: 50px;
	margin-left: auto;
	margin-right: auto;
	text-align: center;
	line-height: 3;
	font-size: 15px;
	font-family: Nunito;
	width: 1000px;
	display: flex;
}

#tabs {
	display: none;
	overflow: hidden;
}

#show-panel-button {
	display: none;
	transition: opacity 0.5s;
}

#show-panel-button:hover {
	background: none;
	opacity: 0.3;
}

.social-media-section {
	flex: 1;
}

@media only screen and (max-width: 900px) {
	body {
		position: relative;
		left: 0px;
	}

	#titletextname {
		font-size: 40px;
	}

	#titletextslogan {
		font-size: 15px;
	}

	#titletext {
		top: 200px;
	}
	
	#wavy {
		height: 300px;
		top: -100px;
	}

	#titleimage {
		height: 350px;
	}

	#tabs2 {
		display: none;
	}
	
	#appointment-paragraph, #bot-paragraph, #doctor-paragraph, #diagnosis-paragraph {
		font-size: 18px;
		margin-left: auto;
		margin-right: auto;
		width: 92%;
		text-align: center;
	}

	#appointment-image, #doctor-image, #bot-image, #diagnosis-image {
		position: absolute;
		margin-left: auto;
		margin-right: auto;
		margin-bottom: 480px;
		width: 200px;
		height: 200px;
	}

	.social-media-image {
		width: 40px;
		height: 40px;
	}

	#contact-info {
		display: block;
		width: auto;
	}

	.social-media-section {
		text-align: center;
		width: fit-content;
		margin-right: auto;
		margin-left: auto;
	}

	#tabs {
		opacity: 1;
		height: 0px;
		text-align: center;
		position: fixed;
		top: 60px;
		left: 0;
		display: none;
		background-color: white;
		width: 100%;
		line-height: 4;
	}

	#appointment-header, #doctor-header, #diagnosis-header, #bot-header, #newsletter-header, #contact-header {
		margin-top: 80px;
		width: 90%;
		margin-left: auto;
		margin-right: auto;
		text-align: center;
		font-size: 25px;
	}

	#newsletter-articles {
		display: block;
	}

	.newsletter-article {
		margin-left: auto;
		margin-right: auto;
		margin-top: -180px;
	}

	#newsletter {
		height: 1800px;
	}

	#first-article {
		margin-top: 20px;
	}

	#diagnosis-image {
		margin-bottom: 540px;
	}
	#diagnosis-description {
		height: 750px;
	}

	#appointment-button, #bot-button, #doctor-button, #diagnosis-button {
		left: 0;
		right: 0;
		width: fit-content;
		text-align: center;
		margin-left: auto;
		margin-right: auto;
	}

	#appointment-description, #bot-description, #doctor-description, #diagnosis-description {
		position: relative;
		top: -220px;
	}

	.tab { font-size: 17px; }

	.grey { display: none }

	#show-panel-button {
		margin-left: 10px;
		display: inline;
	}
}

@media screen and (min-width: 900) {
	#tabs {
		display: none;
	}
}

